--- a/demotest/dbt_project.yml
+++ b/demotest/dbt_project.yml
@@ -33,8 +33,10 @@ models:
   demotest:
     # Config indicated by + and applies to all files under models/example/
     example:
-      +materialized: view
+      +materialized: table
+      +schema: silver  # Replace with your schema name
+      materialized: incremental
 
 
 dbt-cloud:
-  project-id: 70403103963577
+  project-id: 70403103977181
